# scicomp-code

./: Ex_1e.ipynb  Ex_1f.ipynb  Exp_Poly_Solver.py  heat_cond.ipynb  pyproject.toml
Midt2_Ex1/: Ex_1e.ipynb  Ex_1f.ipynb  Ex_1g.ipynb  Theta_Solver.py
Midt2_Ex2/: Ex_2a.ipynb
